codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_empty_mode_cycle_without_context.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"────────────────────────────────────────────"
"❯ Ask Codex to do anything                  "
"                                            "
"                                            "
"                                            "
"                                            "
"────────────────────────────────────────────"
"   100 tokens                              "
"  Code mode (shift+tab to cycle)            "
